The Main Menu and the Secondary Menu are done. The database is working and added MyDB wrapper class to provide ease-of-access methods to get and set values for specified user.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             tools:replace="android:theme" />
-        <activity android:name=".GameplayActivity"></activity>
+        <activity android:name=".GameplayActivity" />
+        <activity android:name=".Main2Activity"></activity>
     </application>
 
 </manifest>
